[project]
name = "kumaroot"
version = "2025.11.9"
description = "KumaROOT - Documentation project"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Shota Takahashi (KMI)", email = "shotakaha@kmi.nagoya-u.ac.jp"}
]
requires-python = ">=3.12"
dependencies = [
    "sphinx>=8.0.2",
    "myst-parser>=4.0.0",
    "sphinx-design>=0.6.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinx-tags>=0.4",
    "sphinxext-opengraph>=0.9.1",
    "sphinxcontrib-googleanalytics>=0.4",
    "matplotlib>=3.8.3",
]

[project.urls]
homepage = "https://kumaroot.readthedocs.io/ja/latest/"
repository = "https://github.com/shotakaha/kumaroot"
documentation = "https://kumaroot.readthedocs.io/ja/latest/"

[project.optional-dependencies]
dev = [
    "commitizen>=3.12.0",
    "pandas>=2.1.4",
    "pendulum>=3.0.0",
    "sphinx-autobuild>=2025.8.25",
    "japanize-matplotlib>=1.1.3",
    "ipykernel>=6.29.1",
    "scikit-learn>=1.4.1",
    "geopandas>=1.0.1",
    "jupyter-bokeh>=4.0.4",
    "geodatasets>=2024.7.0",
    "cartopy>=0.24.1",
    "geoviews>=1.12.0",
    "tqdm>=4.66.4",
    "uproot>=5.3.10",
    "pydantic>=2.8.2",
    "httpx>=0.28.1",
    "pexpect>=4.9.0",
    "python-dotenv>=1.0.1",
    "hvplot>=0.11.2",
]
mystmd = [
    "nodeenv>=1.8.0",
    "mystmd>=1.3.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2025.11.9"
version_provider = "pep621"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "docs/source/conf.py:version",
    "docs/source/conf.py:release",
]
update_changelog_on_bump = true
