[project]
name = "kumaroot"
version = "2026.6.0"
description = "KumaROOT - Documentation project"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Shota Takahashi (KMI)", email = "shotakaha@kmi.nagoya-u.ac.jp"}
]
requires-python = ">=3.12"
dependencies = [
    "sphinx>=9.1.0",
    "myst-parser>=5.1.0",
    "sphinx-design>=0.7.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-mermaid>=2.0.2",
    "sphinx-tags>=0.4.0",
    "sphinxext-opengraph>=0.13.0",
    "sphinxcontrib-googleanalytics>=0.4",
]

[project.urls]
homepage = "https://kumaroot.readthedocs.io/ja/latest/"
repository = "https://github.com/shotakaha/kumaroot"
documentation = "https://kumaroot.readthedocs.io/ja/latest/"

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pendulum>=3.2.0",
    "japanize-matplotlib>=1.1.3",
    "ipykernel>=7.3.0",
    "scikit-learn>=1.9.0",
    "geopandas>=1.1.4",
    "jupyter-bokeh>=4.1.0",
    "geodatasets>=2026.5.1",
    "cartopy>=0.25.0",
    "geoviews>=1.15.1",
    "tqdm>=4.68.3",
    "uproot>=5.7.4",
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    "pexpect>=4.9.0",
    "python-dotenv>=1.2.2",
    "hvplot>=0.12.2",
    "pip-audit>=2.10.1",
]
docs = [
    "sphinx-autobuild>=2025.8.25",
]
mystmd = [
    "nodeenv>=1.8.0",
    "mystmd>=1.3.6",
]

[tool.setuptools]
packages = []

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "docs/source/conf.py:version",
    "docs/source/conf.py:release",
]
update_changelog_on_bump = true
